# dp_library

./: .gitignore  250189 SNAP Recipients Pre-Test Banners.xlsx  CLAUDE.md  Cargo.toml  P0157.FIN  P0721.FIN  Q15.csv  Q15_coded.csv  Q15_codelist.txt  README.md  ban.e  ban.txt  ban.xlsx  counters.chk  p0116.rfl  p0157.rfl  p0414.rfl  p0721.rfl  p0782.rfl
src/: cfmc.rs  crosstabs.rs  lib.rs  rfl.rs
src/weight/: design_ipf.md  ipf.rs  mod.rs  parse_e.rs  uncle.rs
