[package]
name = "dp_library"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chkcounts"
path = "src/bin/chkcounts.rs"

[[bin]]
name = "freq"
path = "src/bin/freq.rs"

[[bin]]
name = "banners"
path = "src/bin/banners.rs"

[dependencies]
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
calamine = "0.30"
serde = { version = "1.0", features = ["derive"] }
ahash = "0.8.12"
