[package]
name = "dp_library"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "chkcounts"
path = "src/bin/chkcounts.rs"

[[bin]]
name = "freq"
path = "src/bin/freq.rs"

[[bin]]
name = "banners"
path = "src/bin/banners.rs"

[dependencies]
ahash = "0.8"
calamine = "0.30"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
