[package]
name = "dp_library"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "chkcounts"
path = "src/bin/chkcounts.rs"

[[bin]]
name = "freq"
path = "src/bin/freq.rs"

[[bin]]
name = "banners"
path = "src/bin/banners.rs"

[[bin]]
name = "weight"
path = "src/bin/weight.rs"

[dependencies]
ipf_survey = { path = "../ipf_survey" }
ahash = "0.8"
calamine = "0.34"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
rayon = "1.11.0"
